Fix word wrap in tweet container

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -5,6 +5,7 @@ article {
   margin-top: 1em;
   width: inherit;
   padding: 0.5em;
+  word-break: break-word;
 }
 
 article:hover {
